// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Table/Sum WithAttributes play-test 1`] = `
<div data-test-block="true">
  <tfoot id="htmlId"
         class="dummyClassname"
         lang="nb"
         data-testid="123ID"
  >
    <tr class>
      <th class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1"
          scope="row"
      >
        Sum
      </th>
      <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1">
        9 000 kr
      </td>
    </tr>
  </tfoot>
</div>
`;

exports[`Tester/Table/Sum WithMultipleSums play-test 1`] = `
<div data-test-block="true">
  <tfoot>
    <tr class>
      <th class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1"
          scope="row"
      >
        Sum
      </th>
      <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1">
        400 kr
      </td>
      <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1">
        899 kr
      </td>
      <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1">
        399 kr
      </td>
    </tr>
  </tfoot>
</div>
`;

exports[`Tester/Table/Sum WithRef play-test 1`] = `
<div data-test-block="true">
  <tfoot>
    <tr class
        id="dummyIdForwardedFromRef"
    >
      <th class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1"
          scope="row"
      >
        Sum
      </th>
      <td class="_dataCell_1ot0q_1 _dataCell_standard_1ot0q_1 _dataCell_right_1ot0q_23  _sum_16rlo_1">
        9 000 kr
      </td>
    </tr>
  </tfoot>
</div>
`;
